--- a/index.html
+++ b/index.html
@@ -27,67 +27,70 @@
             <a href="#" class="brand-logo center">Weather</a>
         </div>
     </nav>
-        <div class="row">
-            <!-- city search sidebar -->
-            <section id="search-continter">
+    <div class="row">
+        <!-- city search sidebar -->
+        <section id="search-continter">
+            <div class="col s12 m4 l2">
+                <div class="card-panel">
+                    <span>City Search:
+                    </span>
+                    <form>
+                        <div class="input-field">
+                            <input id="search" type="search" required>
+                            <button class="btn waves-effect waves-light blue" type="submit" name="action">
+                                <i class="material-icons right">search</i>
+                            </button>
+                        </div>
+                        <div id="searched-city-btn">
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </section>
+        <!-- city current day weather -->
+        <section id="day-container">
+            <div class="col s12 m6 l10">
+                <div class="card-panel">
+                    <span>Current Forecast:
+                    </span>
+                </div>
+            </div>
+        </section>
+        <!-- 5 day forecast -->
+        <section id="five-Day">
+            <div class="card">
                 <div class="col s12 m4 l2">
-                    <div class="card-panel">
-                        <span>City Search:
-                        </span>
-                        <form>
-                            <div class="input-field">
-                                <input id="search" type="search" required>
-                                <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-                                <i class="material-icons">close</i>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </section>
-            <!-- city current day weather -->
-            <section id="day-container">
-                <div class="col s12 m6 l10">
-                    <div class="card-panel">
-                        <span>Current Forecast:
+                    <div class="card-panel blue darken-3 darken-3">
+                        <span class="white-text">5 day forecast
                         </span>
                     </div>
                 </div>
-            </section>
-            <!-- 5 day forecast -->
-            <section id="five-Day">
-                <div class="card">
-                    <div class="col s12 m4 l2">
-                        <div class="card-panel blue darken-3 darken-3">
-                            <span class="white-text">5 day forecast
-                            </span>
-                        </div>
+                <div class="col s12 m4 l2">
+                    <div class="card-panel blue darken-3">
+                        <span class="white-text">5 day forecast
+                        </span>
                     </div>
-                    <div class="col s12 m4 l2">
-                        <div class="card-panel blue darken-3">
-                            <span class="white-text">5 day forecast
-                            </span>
-                        </div>
+                </div>
+                <div class="col s12 m4 l2">
+                    <div class="card-panel blue darken-3">
+                        <span class="white-text">5 day forecast
+                        </span>
                     </div>
-                    <div class="col s12 m4 l2">
-                        <div class="card-panel blue darken-3">
-                            <span class="white-text">5 day forecast
-                            </span>
-                        </div>
+                </div>
+                <div class="col s12 m4 l2">
+                    <div class="card-panel blue darken-3">
+                        <span class="white-text">5 day forecast
+                        </span>
                     </div>
-                    <div class="col s12 m4 l2">
-                        <div class="card-panel blue darken-3">
-                            <span class="white-text">5 day forecast
-                            </span>
-                        </div>
+                </div>
+                <div class="col s12 m4 l2">
+                    <div class="card-panel blue darken-3">
+                        <span class="white-text">5 day forecast
+                        </span>
                     </div>
-                    <div class="col s12 m4 l2">
-                        <div class="card-panel blue darken-3">
-                            <span class="white-text">5 day forecast
-                            </span>
-                        </div>
-                    </div>
-            </section>
-        </div>
+                </div>
+        </section>
+    </div>
     </div>
     <!--JavaScript at end of body for optimized loading-->
     <!-- jquery cdn -->
