current city and temp display

--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
         <section id="day-container">
             <div class="col s12 m6 l10">
                 <div class="card-panel">
-                    <span>Current Forecast:
-                    </span>
+                    <h4>Current Forecast:
+                    </h4>
+                    <h5 id="current-city"></h5>
+                    <p id="current-temp"></p>
                 </div>
             </div>
         </section>
