--- a/index.html
+++ b/index.html
@@ -51,10 +51,12 @@
         <section id="day-container">
             <div class="col s12 m6 l10">
                 <div class="card-panel">
-                    <h4>Current Forecast:
-                    </h4>
-                    <h5 id="current-city"></h5>
-                    <p id="current-temp"></p>
+                    <h4 id="current-city"></h4>
+                    <img id="current-icon" src="" alt=""/>
+                    <h5 id="current-description"></h5>
+                    <h5 id="current-temp"></h5>
+                    <h5 id="current-humidity"></h5>
+                    <h5 id="current-wind"></h5>
                 </div>
             </div>
         </section>
@@ -100,6 +102,8 @@
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <!-- moment -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <!-- script js document -->
     <script type="text/javascript" src="./assets/script.js"></script>
 </body>
